--- a/style.css
+++ b/style.css
@@ -6,30 +6,57 @@ h1 {
     text-align: justify;
     padding-left: 20px;
     font-size: 60px;
-    text-decoration-line: underline;
+    background-color: rgb(8, 61, 48);
+    color:beige;
+    border: beige;
 }
 
 a {
-    font-size: 30px;
-    color: rgb(35, 36, 36);
+    font-size: 40px;
+    color: rgb(8, 61, 48);
     text-decoration: none;
     line-height: 50px;
     border-style: groove;
-    border-color: rgb(35, 36, 36);
-    background-color: antiquewhite;
+    border-radius: 20px;
+    border-width: 8px;
+    border-color: rgb(29, 73, 73);
+    background-color: gainsboro;
+    padding: 10px 0px 10px 60px;
+    display: block;
+    width: 15%;
+    height: auto;
+}
+
+.links {
+    margin: 20px;
 }
 
 img {
     height: auto;
-    width: 80%;
-    margin: 25px;
+    width: 40%;
+    margin: 35px;
+    padding: 5px;
     border-style: outset;
     border-color: rgb(3, 85, 58);
     border-width: 15px;
+    display: inline-block;
+    float: right;
 }
 
 p,
 h1,
 h2 {
     padding-left: 25px;
+    margin: 15px;
+}
+
+h2 {
+    font-size: 48px;
+}
+
+p,
+ul,
+ol {
+    font-size: 24px;
+    margin: 15px;
 }
